skill reorder, addition

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -192,11 +192,11 @@ import Layout from 'layouts/Layout.astro'
 					<h3 class='text-xl'>Skills</h3>
 				</div>
 				<ul class='col-span-3 list-disc text-white'>
-					<li>React</li>
-					<li>React Native</li>
-					<li>Next.js</li>
+					<li class='font-bold'>Typescript</li>
+					<li class='font-bold'>React</li>
+					<li>React Native / Expo</li>
+					<li>Next.js / Vercel</li>
 					<li>TailwindCSS / SASS</li>
-					<li>Prisma / Sequelize</li>
 				</ul>
 				<ul class='col-span-3 list-disc text-white'>
 					<li>tRPC</li>
@@ -206,11 +206,11 @@ import Layout from 'layouts/Layout.astro'
 					<li>ReactHookForm / Formik</li>
 				</ul>
 				<ul class='col-span-3 list-disc text-white'>
+					<li>Prisma / Sequelize</li>
 					<li>MySQL (PlanetScale)</li>
-					<li>Node.js</li>
 					<li>Astro</li>
 					<li>SolidJs</li>
-					<li>Figma</li>
+					<li>Figma, and many more</li>
 				</ul>
 			</div>
 
