active in community

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -44,7 +44,8 @@ import Layout from 'layouts/Layout.astro'
 						the user experience by optimizing performance. I leverage TypeScript extensively to
 						ensure fast and reliable development, and build design systems with Tailwind CSS to make
 						products stand out & consistent. As a seasonal full-stack developer, I have extensive
-						experience building APIs, using ORM/SQL, and managing databases.
+						experience building APIs, using ORM/SQL, and managing databases. Active in programming
+						community and stay up-to-date with the latest technology.
 					</p>
 					<p class='indent-8'>
 						I am looking for collaborative and supportive environment where we can grow together as
@@ -215,6 +216,29 @@ import Layout from 'layouts/Layout.astro'
 			</div>
 
 			<div id='languages' class='grid grid-cols-12'>
+				<div class='col-span-3'>
+					<h3 class='text-xl'>Languages</h3>
+				</div>
+				<div class='col-span-9 space-y-4'>
+					<p>
+						<span><b>English</b> as international language</span>
+						<br />
+						<span>Professional working proficiency (C1)</span>
+					</p>
+					<p>
+						<span><b>Bahasa Indonesia</b> as national language</span>
+						<br />
+						<span>Native / bilingual proficiency</span>
+					</p>
+					<p>
+						<span><b>Javanese</b> as local language</span>
+						<br />
+						<span>Native / bilingual proficiency</span>
+					</p>
+				</div>
+			</div>
+
+			<div id='references' class='grid grid-cols-12'>
 				<div class='col-span-3'>
 					<h3 class='text-xl'>Languages</h3>
 				</div>
