--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -45,7 +45,7 @@ import Layout from 'layouts/Layout.astro'
 						ensure fast and reliable development, and build design systems with Tailwind CSS to make
 						products stand out & consistent. As a seasonal full-stack developer, I have extensive
 						experience building APIs, using ORM/SQL, and managing databases. Active in programming
-						community and stay up-to-date with the latest technology.
+						community make me stay up-to-date with the latest technology.
 					</p>
 					<p class='indent-8'>
 						I am looking for collaborative and supportive environment where we can grow together as
@@ -240,24 +240,25 @@ import Layout from 'layouts/Layout.astro'
 
 			<div id='references' class='grid grid-cols-12'>
 				<div class='col-span-3'>
-					<h3 class='text-xl'>Languages</h3>
+					<h3 class='text-xl'>References</h3>
 				</div>
-				<div class='col-span-9 space-y-4'>
-					<p>
-						<span><b>English</b> as international language</span>
-						<br />
-						<span>Professional working proficiency (C1)</span>
-					</p>
-					<p>
-						<span><b>Bahasa Indonesia</b> as national language</span>
-						<br />
-						<span>Native / bilingual proficiency</span>
-					</p>
-					<p>
-						<span><b>Javanese</b> as local language</span>
-						<br />
-						<span>Native / bilingual proficiency</span>
-					</p>
+				<div class='col-span-3'>
+					<p class='font-bold'>Yudhistira Eka Putra</p>
+					<p>Lyaeus GmbH</p>
+					<p>yudhistira.eka.putra@gmail.com</p>
+					<p>+62 811 8949 797</p>
+				</div>
+				<div class='col-span-3'>
+					<p class='font-bold'>Rahmat Gilang Maulana</p>
+					<p>Sirclo - sirclo.com</p>
+					<p>gilang.maulana@gmail.com</p>
+					<p>+62 851 5528 1158</p>
+				</div>
+				<div class='col-span-3'>
+					<p class='font-bold'>Fadilah Arifki Pandatech</p>
+					<p>Pandatech - pandatech.io</p>
+					<p>fadilah.arifki29@gmail.com</p>
+					<p>+62 895 0582 2191</p>
 				</div>
 			</div>
 		</div>
