concise job desc

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -77,11 +77,11 @@ import Layout from 'layouts/Layout.astro'
 							</li>
 							<li>
 								Migrating project to a monorepo using Turborepo to make package reusable in multiple
-								apps
+								apps.
 							</li>
 							<li>
-								Added a react native (Expo) to the existing project and integrated it with the
-								back-end and auth using Clerk.
+								Added a react native (Expo) to existing project and integrated it with the back-end
+								and auth using Clerk.
 							</li>
 							<li>
 								Built a personal website with Astro that achieved a perfect 100 score on Lighthouse.
@@ -104,8 +104,8 @@ import Layout from 'layouts/Layout.astro'
 							<li>Developed an app with improved accessibility using ChakraUI.</li>
 							<li>Designed multiple landing page mockups using Figma.</li>
 							<li>
-								Created a custom markdown editor with Tiptap, incorporating all the features users
-								expect from a rich text editor.
+								Created custom markdown editor with Tiptap, incorporating all the features users
+								expect for rich content.
 							</li>
 							<li>Implemented infinite scroll for blog posts, resulting in faster query speeds.</li>
 						</ul>
@@ -142,12 +142,12 @@ import Layout from 'layouts/Layout.astro'
 								error-free data input experience.
 							</li>
 							<li>
-								Managed async server state with client caching, resulting in faster data retrieval
-								and a more responsive app.
+								Managed async server state with client caching, resulting faster data retrieval and
+								more responsive app.
 							</li>
 							<li>
-								Developed a data export feature to Excel and PDF, allowing users to easily export
-								and share data with others.
+								Developed data export feature to Excel & PDF, allowing users to easily export and
+								share data with others.
 							</li>
 							<li>
 								Built a custom markdown editor for rich text content, providing a more flexible and
