front-end first

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -5,12 +5,12 @@ import Layout from 'layouts/Layout.astro'
 <Layout
 	class='bg-white'
 	title='Online Resume of Alberto R Cahyantara'
-	description='Full-stack/ Front-end Developer with modern tech stack & workflow.'
+	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 >
 	<div class='container mx-auto border-x'>
 		<section id='header' class='space-y-4 bg-slate-700 pb-4 pt-8'>
 			<h1 class='text-center font-head text-6xl'>Alberto R Cahyantara</h1>
-			<h2 class='text-center font-body text-2xl'>Full-stack / Front-end Developer</h2>
+			<h2 class='text-center font-body text-2xl'>Front-end / Full-stack Developer</h2>
 		</section>
 		<div id='sub-header' class='grid grid-cols-2 gap-x-10 bg-slate-800 py-4'>
 			<section id='contacts'>
