--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -255,7 +255,7 @@ import Layout from 'layouts/Layout.astro'
 					<p>+62 851 5528 1158</p>
 				</div>
 				<div class='col-span-3'>
-					<p class='font-bold'>Fadilah Arifki Pandatech</p>
+					<p class='font-bold'>Fadilah Arifki</p>
 					<p>Pandatech - pandatech.io</p>
 					<p>fadilah.arifki29@gmail.com</p>
 					<p>+62 895 0582 2191</p>
