--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -7,12 +7,12 @@ import Layout from 'layouts/Layout.astro'
 	title='Online Resume of Alberto R Cahyantara'
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 >
-	<div class='container mx-auto border-x'>
-		<section id='header' class='space-y-4 bg-slate-700 pb-4 pt-8'>
+	<div class='mx-auto max-w-screen-xl bg-gray-900 shadow-xl shadow-gray-600'>
+		<section id='header' class='space-y-4 bg-gray-700 pb-4 pt-8'>
 			<h1 class='text-center font-head text-6xl'>Alberto R Cahyantara</h1>
 			<h2 class='text-center font-body text-2xl'>Front-end / Full-stack Developer</h2>
 		</section>
-		<div id='sub-header' class='grid grid-cols-2 gap-x-10 bg-slate-800 py-4'>
+		<div id='sub-header' class='grid grid-cols-2 gap-x-12 bg-gray-800 py-4'>
 			<section id='contacts'>
 				<div class='ml-auto w-fit'>
 					<address class='font-body not-italic text-white'>Jakarta, Indonesia</address>
