color de-emphasize

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -63,7 +63,7 @@ import Layout from 'layouts/Layout.astro'
 					<div>
 						<p class='flex justify-between'>
 							<span class='text-lg font-bold'>Full-stack Developer - Freelance</span>
-							<span class='italic'>July 2022 — now</span>
+							<span class='italic text-gray-400'>July 2022 — now</span>
 						</p>
 						<ul class='list-disc font-body text-white'>
 							<li>
@@ -114,7 +114,7 @@ import Layout from 'layouts/Layout.astro'
 					<div>
 						<p class='flex justify-between'>
 							<span class='text-lg font-bold'>Front-end Developer at Achiko AG</span>
-							<span class='italic'>September 2020 — June 2022</span>
+							<span class='italic text-gray-400'>September 2020 — June 2022</span>
 						</p>
 						<ul class='list-disc font-body text-white'>
 							<li>
@@ -176,14 +176,14 @@ import Layout from 'layouts/Layout.astro'
 							<p class='text-lg font-bold'>Full-stack Javascript Developer</p>
 							<p>Hacktiv8 Bootcamp, Jakarta</p>
 						</div>
-						<p class='italic'>February — June 2020</p>
+						<p class='italic text-gray-400'>February — June 2020</p>
 					</div>
 					<div class='flex justify-between'>
 						<div class='leading-loose'>
 							<p class='text-lg font-bold'>Bachelor of Engineering Physics</p>
 							<p>Sepuluh Nopember Institute of Technology (ITS), Surabaya</p>
 						</div>
-						<p class='italic'>2013 — 2017</p>
+						<p class='italic text-gray-400'>2013 — 2017</p>
 					</div>
 				</div>
 			</div>
@@ -245,20 +245,20 @@ import Layout from 'layouts/Layout.astro'
 				<div class='col-span-3'>
 					<p class='font-bold'>Yudhistira Eka Putra</p>
 					<p>Lyaeus GmbH</p>
-					<p>yudhistira.eka.putra@gmail.com</p>
-					<p>+62 811 8949 797</p>
+					<p class='text-gray-400'>yudhistira.eka.putra@gmail.com</p>
+					<p class='text-gray-400'>+62 811 8949 797</p>
 				</div>
 				<div class='col-span-3'>
 					<p class='font-bold'>Rahmat Gilang Maulana</p>
 					<p>Sirclo - sirclo.com</p>
-					<p>gilang.maulana@gmail.com</p>
-					<p>+62 851 5528 1158</p>
+					<p class='text-gray-400'>gilang.maulana@gmail.com</p>
+					<p class='text-gray-400'>+62 851 5528 1158</p>
 				</div>
 				<div class='col-span-3'>
 					<p class='font-bold'>Fadilah Arifki</p>
 					<p>Pandatech - pandatech.io</p>
-					<p>fadilah.arifki29@gmail.com</p>
-					<p>+62 895 0582 2191</p>
+					<p class='text-gray-400'>fadilah.arifki29@gmail.com</p>
+					<p class='text-gray-400'>+62 895 0582 2191</p>
 				</div>
 			</div>
 		</div>
