concave contacts text

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -20,7 +20,7 @@ import Layout from 'layouts/Layout.astro'
 			<section id='contacts' class='w-72'>
 				<p class='flex flex-col items-end leading-tight'>
 					<span class='font-body not-italic text-gray-400'>Jakarta, Indonesia</span>
-					<span class='text-gray-400'>+62 851 7432 8051</span>
+					<span class='text-gray-400'>+62 851 7432 8051 &nbsp;</span>
 					<span class='text-gray-400'>alberto.cahyantara@gmail.com</span>
 				</p>
 			</section>
@@ -28,7 +28,7 @@ import Layout from 'layouts/Layout.astro'
 			<section id='socials' class='w-72 font-body text-gray-400'>
 				<p class='flex flex-col leading-tight text-gray-400'>
 					<a href='https://www.riolly.dev/'>riolly.dev</a>
-					<a href='https://github.com/riolly'>github.com/riolly</a>
+					<a href='https://github.com/riolly'>&nbsp; github.com/riolly</a>
 					<a href='https://linkedin.com/in/riolly'>linkedin.com/in/riolly</a>
 				</p>
 			</section>
