--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,9 +1,13 @@
 ---
 import Layout from 'layouts/Layout.astro'
+import imgSrc from 'public/images/og-resume.jpg'
+
+const image = {
+	src: imgSrc,
+}
 ---
 
 <Layout
-	class='bg-white'
 	title='Online Resume of Alberto R Cahyantara'
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 >
