--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,15 +1,12 @@
 ---
 import Layout from 'layouts/Layout.astro'
-import imgSrc from 'public/images/og-resume.jpg'
-
-const image = {
-	src: imgSrc,
-}
+import img from 'public/images/og-resume.jpg'
 ---
 
 <Layout
 	title='Online Resume of Alberto R Cahyantara'
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
+	image={img}
 >
 	<div class='mx-auto max-w-screen-xl bg-gray-900 shadow-xl shadow-gray-600'>
 		<section id='header' class='space-y-4 border-r-[12px] border-gray-300 bg-gray-700 pb-4 pt-8'>
