--- a/src/components/HeadSeo.astro
+++ b/src/components/HeadSeo.astro
@@ -9,15 +9,16 @@ export interface Props {
 	image?: string
 }
 
-const {frontmatter, type, title, description, image} = Astro.props as Props
-
+const {frontmatter, type, title, description, image} = Astro.props as Omit<Props, 'image'> & {
+	image?: {src: string}
+}
 const canonicalUrl = new URL(Astro.url.pathname, Astro.site)
 
 const formattedContentTitle = frontmatter
 	? `${frontmatter.title} 🚀 ${SITE.title}`
 	: title ?? SITE.title
 
-const imageSrc = frontmatter?.image?.src ?? image ?? OPEN_GRAPH.image.src
+const imageSrc = frontmatter?.image?.src ?? image?.src ?? OPEN_GRAPH.image.src
 const imageUrl = new URL(imageSrc, Astro.url.origin)
 const imageAlt = frontmatter?.image?.alt ?? OPEN_GRAPH.image.alt
 
