--- a/src/components/HeadSeo.astro
+++ b/src/components/HeadSeo.astro
@@ -37,6 +37,9 @@ const ogType = type ?? 'article'
 <meta property='og:image' content={imageUrl} />
 <meta property='og:image:alt' content={imageAlt} />
 <meta property='og:site_name' content={SITE.title} />
+<meta property='og:image:type' content='image/jpeg' />
+<meta property='og:image:width' content='1200' />
+<meta property='og:image:height' content='630' />
 
 <!-- Twitter Tags -->
 <meta name='twitter:card' content='summary_large_image' />
