--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 @layer base {
 	html {
 		font-family: system-ui, sans-serif;
-		@apply scroll-smooth bg-slate-900;
+		@apply scroll-smooth bg-slate-900 scrollbar-thin scrollbar-track-transparent scrollbar-thumb-blue-300 scrollbar-thumb-rounded;
 	}
 
 	h1,
@@ -17,6 +17,14 @@
 
 	p {
 		@apply font-body text-slate-50;
+	}
+
+	.custom-scrollbar {
+		@apply scrollbar-thin scrollbar-track-blue-200/10 scrollbar-thumb-blue-800 scrollbar-thumb-rounded;
+	}
+
+	.custom-scrollbar::-webkit-scrollbar-thumb {
+		@apply rounded-full;
 	}
 
 	/* code {
