better font color

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -4,14 +4,14 @@ import img from 'public/images/og-resume.jpg'
 ---
 
 <Layout
-	title='Online Resume of Alberto R Cahyantara'
+	title="Alberto Riolly Cahyantara's Resume"
 	description='Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software.'
 	image={img}
 >
 	<div class='mx-auto max-w-screen-xl bg-gray-900 shadow-xl shadow-gray-600'>
 		<section id='header' class='space-y-4 border-r-[12px] border-gray-300 bg-gray-700 pb-4 pt-8'>
 			<h1 class='text-center font-head text-6xl'>Alberto R Cahyantara</h1>
-			<h2 class='text-center font-body text-2xl'>Front-end / Full-stack Developer</h2>
+			<h2 class='text-center font-body text-2xl text-blue-100'>Front-end / Full-stack Developer</h2>
 		</section>
 
 		<div
@@ -19,15 +19,15 @@ import img from 'public/images/og-resume.jpg'
 			class='flex justify-center gap-4 border-r-4 border-gray-300 bg-gray-800 py-3'
 		>
 			<section id='contacts' class='w-72'>
-				<p class='flex flex-col items-end leading-tight'>
-					<span class='font-body not-italic text-gray-400'>Jakarta, Indonesia</span>
-					<span class='text-gray-400'>+62 851 7432 8051 &nbsp;</span>
-					<span class='text-gray-400'>alberto.cahyantara@gmail.com</span>
+				<p class='flex flex-col items-end leading-tight text-gray-300'>
+					<span class='font-body not-italic'>Jakarta, Indonesia</span>
+					<span>+62 851 7432 8051 &nbsp;</span>
+					<span>alberto.cahyantara@gmail.com</span>
 				</p>
 			</section>
 			<div class='flex self-center text-white'>&#9679;</div>
-			<section id='socials' class='w-72 font-body text-gray-400'>
-				<p class='flex flex-col leading-tight text-gray-400'>
+			<section id='socials' class='w-72 font-body'>
+				<p class='flex flex-col leading-tight text-gray-300'>
 					<a href='https://www.riolly.dev/'>riolly.dev</a>
 					<a href='https://github.com/riolly'>&nbsp; github.com/riolly</a>
 					<a href='https://linkedin.com/in/riolly'>linkedin.com/in/riolly</a>
@@ -41,7 +41,7 @@ import img from 'public/images/og-resume.jpg'
 					<h3 class='border-gray-400-2 w-fit border-t px-2 pt-1 text-xl'>Profile</h3>
 				</div>
 				<div class='col-span-9 pt-2'>
-					<p class='indent-8'>
+					<p class='indent-8 text-blue-100'>
 						Self-learned front-end developer focused to create engaging and intuitive UI. With over
 						three years of experience using React and its ecosystem, including Next.js, I prioritize
 						the user experience by optimizing performance. I leverage TypeScript extensively to
@@ -50,7 +50,7 @@ import img from 'public/images/og-resume.jpg'
 						experience building APIs, using ORM/SQL, and managing databases. Active in programming
 						community make me stay up-to-date with the latest technology.
 					</p>
-					<p class='indent-8'>
+					<p class='indent-8 text-blue-100'>
 						I am looking for collaborative and supportive environment where we can grow together as
 						a team through solving problem and build innovative product.
 					</p>
@@ -65,10 +65,10 @@ import img from 'public/images/og-resume.jpg'
 				<div class='col-span-9 flex flex-col gap-4 pt-2'>
 					<div>
 						<p class='flex justify-between'>
-							<span class='text-lg font-bold'>Full-stack Developer - Freelance</span>
-							<span class='italic text-gray-400'>July 2022 — now</span>
+							<span class='text-lg font-bold text-blue-100'>Full-stack Developer - Freelance</span>
+							<span class='italic text-slate-400'>July 2022 — now</span>
 						</p>
-						<ul class='list-disc font-body text-white'>
+						<ul class='list-disc text-gray-300'>
 							<li>
 								Developed full-stack applications using Next.js, utilizing various rendering
 								techniques such as SSG, ISR, and SSR to improve performance and SEO depending on the
@@ -116,10 +116,10 @@ import img from 'public/images/og-resume.jpg'
 
 					<div>
 						<p class='flex justify-between'>
-							<span class='text-lg font-bold'>Front-end Developer at Achiko AG</span>
-							<span class='italic text-gray-400'>September 2020 — June 2022</span>
+							<span class='text-lg font-bold text-blue-100'>Front-end Developer at Achiko AG</span>
+							<span class='italic text-slate-400'>September 2020 — June 2022</span>
 						</p>
-						<ul class='list-disc font-body text-white'>
+						<ul class='list-disc text-gray-300'>
 							<li>
 								Led & finished dashboard app revamp project within four months with a new design
 								system, resulting in increased user engagement and improved UX.
@@ -176,17 +176,17 @@ import img from 'public/images/og-resume.jpg'
 				<div class='col-span-9 space-y-4 pt-2'>
 					<div class='flex justify-between'>
 						<div class='leading-loose'>
-							<p class='text-lg font-bold'>Full-stack Javascript Developer</p>
-							<p>Hacktiv8 Bootcamp, Jakarta</p>
+							<p class='text-lg font-bold text-blue-100'>Full-stack Javascript Developer</p>
+							<p class='text-gray-300'>Hacktiv8 Bootcamp, Jakarta</p>
 						</div>
-						<p class='italic text-gray-400'>February — June 2020</p>
+						<p class='italic text-slate-400'>February — June 2020</p>
 					</div>
 					<div class='flex justify-between'>
 						<div class='leading-loose'>
-							<p class='text-lg font-bold'>Bachelor of Engineering Physics</p>
-							<p>Sepuluh Nopember Institute of Technology (ITS), Surabaya</p>
+							<p class='text-lg font-bold text-blue-100'>Bachelor of Engineering Physics</p>
+							<p class='text-gray-300'>Sepuluh Nopember Institute of Technology (ITS), Surabaya</p>
 						</div>
-						<p class='italic text-gray-400'>2013 — 2017</p>
+						<p class='italic text-slate-400'>2013 — 2017</p>
 					</div>
 				</div>
 			</div>
@@ -196,21 +196,21 @@ import img from 'public/images/og-resume.jpg'
 					<h3 class='border-gray-400-2 w-fit border-t px-2 pt-1 text-xl'>Skills</h3>
 				</div>
 				<div class='col-span-9 grid grid-cols-3 pt-2'>
-					<ul class='list-disc text-white'>
+					<ul class='list-disc text-gray-300'>
 						<li class='font-bold'>Typescript</li>
 						<li class='font-bold'>React</li>
 						<li>React Native / Expo</li>
 						<li>Next.js / Vercel</li>
 						<li>TailwindCSS / SASS</li>
 					</ul>
-					<ul class='list-disc text-white'>
+					<ul class='list-disc text-gray-300'>
 						<li>tRPC</li>
 						<li>TanStack query, table, router</li>
 						<li>Auth.js / OAuth</li>
 						<li>Zustand / Redux</li>
 						<li>ReactHookForm / Formik</li>
 					</ul>
-					<ul class='list-disc text-white'>
+					<ul class='list-disc text-gray-300'>
 						<li>Prisma / Sequelize</li>
 						<li>MySQL (PlanetScale)</li>
 						<li>Astro</li>
@@ -226,19 +226,19 @@ import img from 'public/images/og-resume.jpg'
 				</div>
 				<div class='col-span-9 space-y-4 pt-2'>
 					<p>
-						<span><b>English</b> as international language</span>
+						<span class='text-blue-100'><b>English</b> as international language</span>
 						<br />
-						<span>Professional working proficiency (C1)</span>
+						<span class='text-gray-300'>Professional working proficiency (C1)</span>
 					</p>
 					<p>
-						<span><b>Bahasa Indonesia</b> as national language</span>
+						<span class='text-blue-100'><b>Bahasa Indonesia</b> as national language</span>
 						<br />
-						<span>Native / bilingual proficiency</span>
+						<span class='text-gray-300'>Native / bilingual proficiency</span>
 					</p>
 					<p>
-						<span><b>Javanese</b> as local language</span>
+						<span class='text-blue-100'><b>Javanese</b> as local language</span>
 						<br />
-						<span>Native / bilingual proficiency</span>
+						<span class='text-gray-300'>Native / bilingual proficiency</span>
 					</p>
 				</div>
 			</div>
@@ -249,20 +249,20 @@ import img from 'public/images/og-resume.jpg'
 				</div>
 				<div class='col-span-9 grid grid-cols-3 pt-2'>
 					<div>
-						<p class='font-bold'>Yudhistira Eka Putra</p>
-						<p>Lyaeus GmbH</p>
+						<p class='font-bold text-blue-100'>Yudhistira Eka Putra</p>
+						<p class='text-gray-300'>Lyaeus GmbH</p>
 						<p class='text-gray-400'>yudhistira.eka.putra@gmail.com</p>
 						<p class='text-gray-400'>+62 811 8949 797</p>
 					</div>
 					<div>
-						<p class='font-bold'>Rahmat Gilang Maulana</p>
-						<p>Sirclo - sirclo.com</p>
+						<p class='font-bold text-blue-100'>Rahmat Gilang Maulana</p>
+						<p class='text-gray-300'>Sirclo - sirclo.com</p>
 						<p class='text-gray-400'>gilang.maulana@gmail.com</p>
 						<p class='text-gray-400'>+62 851 5528 1158</p>
 					</div>
 					<div>
-						<p class='font-bold'>Fadilah Arifki</p>
-						<p>Pandatech - pandatech.io</p>
+						<p class='font-bold text-blue-100'>Fadilah Arifki</p>
+						<p class='text-gray-300'>Pandatech - pandatech.io</p>
 						<p class='text-gray-400'>fadilah.arifki29@gmail.com</p>
 						<p class='text-gray-400'>+62 895 0582 2191</p>
 					</div>
